Build for production

--- a/about/index.html
+++ b/about/index.html
@@ -47,7 +47,7 @@
             </div>
             <div id="menu" class="nav-spacer">
                 <a class="link" href="/all">Use Cases</a>
-<a class="link hide-mobile" id="contribute" href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion:" target="_blank" rel="noopener">Contribute</a>
+<a class="link hide-mobile" id="contribute" href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion: " target="_blank" rel="noopener">Contribute</a>
             </div>
         </div>
     </div>
@@ -57,7 +57,7 @@
             <h3>About Code to go</h3>
             <p class="about-text">
                 Code to go aims to help developers learning JavaScript find up to date, accurate and ready to use snippets of JavaScript code for common use cases.<br>
-                If you want to suggest a common use case, please create a new issue on the github repository by clicking on the Contribute button.
+                If you want to suggest a common use case, please create a new issue on the github repository by clicking on <a href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion: " target="_blank" rel="noopener">Contribute</a>.
             </p>
         </div>
     </div>
