--- a/all/index.html
+++ b/all/index.html
@@ -47,7 +47,7 @@
             </div>
             <div id="menu" class="nav-spacer">
                 <a class="link" href="/all">Use Cases</a>
-<a class="link hide-mobile" id="contribute" href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion:" target="_blank" rel="noopener">Contribute</a>
+<a class="link hide-mobile" id="contribute" href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion: " target="_blank" rel="noopener">Contribute</a>
             </div>
         </div>
     </div>
@@ -55,10 +55,28 @@
     <div class="container all">
         <h4 class="page-title">All Use Cases</h4>
 
+                        <a href="/how-to-prevent-default-action-of-event-in-javascript">
+            <div class="card">
+                <h3>How to prevent default action of event in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-remove-a-property-from-object-in-javascript">
+            <div class="card">
+                <h3>How to remove a property from object in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
                         <a href="/how-to-interpolate-in-javascript">
             <div class="card">
                 <h3>How to interpolate in JavaScript</h3>
-                <h5>Last updated Nov 11, 2017</h5>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-split-string-into-array-of-characters-in-javascript">
+            <div class="card">
+                <h3>How to split string into array of characters in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
             </div>
         </a>
                         <a href="/how-to-find-next-element-in-javascript">
@@ -73,6 +91,12 @@
                 <h5>Last updated Nov 11, 2017</h5>
             </div>
         </a>
+                        <a href="/how-to-check-if-array-includes-element-in-javascript">
+            <div class="card">
+                <h3>How to check if array includes element in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
                         <a href="/how-to-increment-a-variable-in-javascript">
             <div class="card">
                 <h3>How to increment a variable in JavaScript</h3>
@@ -85,10 +109,16 @@
                 <h5>Last updated Nov 11, 2017</h5>
             </div>
         </a>
+                        <a href="/how-to-check-if-string-includes-another-string-in-javascript">
+            <div class="card">
+                <h3>How to check if string includes another string in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
                         <a href="/how-to-get-keys-of-object-in-javascript">
             <div class="card">
                 <h3>How to get keys of object in JavaScript</h3>
-                <h5>Last updated Nov 11, 2017</h5>
+                <h5>Last updated Dec 16, 2017</h5>
             </div>
         </a>
                         <a href="/how-to-find-previous-element-in-javascript">
@@ -97,10 +127,34 @@
                 <h5>Last updated Nov 11, 2017</h5>
             </div>
         </a>
+                        <a href="/how-to-destructure-from-object-in-javascript">
+            <div class="card">
+                <h3>How to destructure from object in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-check-if-element-has-class-in-javascript">
+            <div class="card">
+                <h3>How to check if element has class in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-get-first-character-of-string-in-javascript">
+            <div class="card">
+                <h3>How to get first character of string in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-add-item-to-array-in-javascript">
+            <div class="card">
+                <h3>How to add item to array in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
                         <a href="/how-to-replace-spaces-with-dashes-in-javascript">
             <div class="card">
                 <h3>How to replace spaces with dashes in JavaScript</h3>
-                <h5>Last updated Nov 11, 2017</h5>
+                <h5>Last updated Dec 16, 2017</h5>
             </div>
         </a>
                         <a href="/how-to-loop-through-object-in-javascript">
@@ -113,6 +167,18 @@
             <div class="card">
                 <h3>How to find element by id in JavaScript</h3>
                 <h5>Last updated Nov 11, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-capitalize-first-letter-in-javascript">
+            <div class="card">
+                <h3>How to capitalize first letter in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-get-last-character-of-string-in-javascript">
+            <div class="card">
+                <h3>How to get last character of string in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
             </div>
         </a>
                         <a href="/how-to-match-text-against-regex-in-javascript">
@@ -169,6 +235,12 @@
                 <h5>Last updated Nov 11, 2017</h5>
             </div>
         </a>
+                        <a href="/how-to-validate-email-in-javascript">
+            <div class="card">
+                <h3>How to validate email in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
                         <a href="/how-to-write-a-multiline-string-in-javascript">
             <div class="card">
                 <h3>How to write a multiline string in JavaScript</h3>
@@ -179,6 +251,30 @@
             <div class="card">
                 <h3>How to decrement a variable in JavaScript</h3>
                 <h5>Last updated Nov 11, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-destructure-from-array-in-javascript">
+            <div class="card">
+                <h3>How to destructure from array in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-replace-a-class-of-element-in-javascript">
+            <div class="card">
+                <h3>How to replace a class of element in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-get-current-page-url-in-javascript">
+            <div class="card">
+                <h3>How to get current page url in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-empty-array-in-javascript">
+            <div class="card">
+                <h3>How to empty array in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
             </div>
         </a>
                         <a href="/how-to-find-multiple-DOM-elements-in-javascript">
@@ -203,6 +299,24 @@
             <div class="card">
                 <h3>How to uppercase a string in JavaScript</h3>
                 <h5>Last updated Nov 11, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-replace-all-occurrences-of-string-in-javascript">
+            <div class="card">
+                <h3>How to replace all occurrences of string in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-redirect-to-another-page-in-javascript">
+            <div class="card">
+                <h3>How to redirect to another page in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-uppercase-every-word-in-javascript">
+            <div class="card">
+                <h3>How to uppercase every word in JavaScript</h3>
+                <h5>Last updated Dec 16, 2017</h5>
             </div>
         </a>
                         <a href="/how-to-reload-page-in-javascript">
