--- a/how-to-get-keys-of-object-in-javascript/index.html
+++ b/how-to-get-keys-of-object-in-javascript/index.html
@@ -46,7 +46,7 @@
             </div>
             <div id="menu" class="nav-spacer">
                 <a class="link" href="/all">Use Cases</a>
-<a class="link hide-mobile" id="contribute" href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion:" target="_blank" rel="noopener">Contribute</a>
+<a class="link hide-mobile" id="contribute" href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion: " target="_blank" rel="noopener">Contribute</a>
             </div>
         </div>
     </div>
@@ -57,16 +57,15 @@
 
         <div class="card">
             <h2>How to get keys of object in JavaScript</h2>
-            <h5>Last updated Nov 11, 2017</h5>
+            <h5>Last updated Dec 16, 2017</h5>
             <pre><code class="language-javascript">const person = {
     key: 'value',
     first_name: 'John',
     last_name: 'Doe'
 };
 
-const keys = Object.keys(person);
-console.log(keys);</code></pre>
-<pre class="output">["key", "first_name", "last_name"]</pre>
+Object.keys(person);</code></pre>
+<pre class="output">['key', 'first_name', 'last_name']</pre>
                         <div class="mdn-container">
                 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/keys" target="_blank" rel="noopener">MDN Docs</a>
             </div>
