--- a/how-to-interpolate-in-javascript/index.html
+++ b/how-to-interpolate-in-javascript/index.html
@@ -46,7 +46,7 @@
             </div>
             <div id="menu" class="nav-spacer">
                 <a class="link" href="/all">Use Cases</a>
-<a class="link hide-mobile" id="contribute" href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion:" target="_blank" rel="noopener">Contribute</a>
+<a class="link hide-mobile" id="contribute" href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion: " target="_blank" rel="noopener">Contribute</a>
             </div>
         </div>
     </div>
@@ -57,11 +57,15 @@
 
         <div class="card">
             <h2>How to interpolate in JavaScript</h2>
-            <h5>Last updated Nov 11, 2017</h5>
+            <h5>Last updated Dec 16, 2017</h5>
             <pre><code class="language-javascript">const name = 'John';
 
-console.log(`Welcome ${name} to your new home!`);</code></pre>
-<pre class="output">Welcome John to your new home!</pre>
+console.log(`Welcome ${name}.
+You have ${2 * 5} new notifications!`);</code></pre>
+<pre class="output">
+Welcome John.
+You have 10 new notifications!
+</pre>
                         <div class="mdn-container">
                 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals" target="_blank" rel="noopener">MDN Docs</a>
             </div>
