--- a/how-to-replace-spaces-with-dashes-in-javascript/index.html
+++ b/how-to-replace-spaces-with-dashes-in-javascript/index.html
@@ -46,7 +46,7 @@
             </div>
             <div id="menu" class="nav-spacer">
                 <a class="link" href="/all">Use Cases</a>
-<a class="link hide-mobile" id="contribute" href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion:" target="_blank" rel="noopener">Contribute</a>
+<a class="link hide-mobile" id="contribute" href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion: " target="_blank" rel="noopener">Contribute</a>
             </div>
         </div>
     </div>
@@ -57,11 +57,10 @@
 
         <div class="card">
             <h2>How to replace spaces with dashes in JavaScript</h2>
-            <h5>Last updated Nov 11, 2017</h5>
+            <h5>Last updated Dec 16, 2017</h5>
             <pre><code class="language-javascript">const text = "codetogo saved me tons of time";
-const token = text.replace(/ /g, '-');
 
-console.log(token);</code></pre>
+text.replace(/ /g, '-');</code></pre>
 <pre class="output">codetogo-saved-me-tons-of-time</pre>
                     </div>
     </div>
