--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
            </a>
            <div id="menu">
             <a class="link" href="/all">Use Cases</a>
-<a class="link hide-mobile" id="contribute" href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion:" target="_blank" rel="noopener">Contribute</a>
+<a class="link hide-mobile" id="contribute" href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion: " target="_blank" rel="noopener">Contribute</a>
         </div>
     </div>
 </div>
@@ -62,7 +62,7 @@
         <a href="/how-to-loop-through-array-in-javascript/">
             <h3>How to loop through array in JavaScript</h3>
         </a>
-        <h5>Last updated Nov 13, 2017</h5>
+        <h5>Last updated Nov 11, 2017</h5>
 
         <pre><code class="language-javascript">const people = ['John', 'Nicole', 'Jad'];
 
@@ -78,18 +78,94 @@ Jad
         <a href="/how-to-add-class-to-element-in-javascript/">
             <h3>How to add class to element in JavaScript</h3>
         </a>
-        <h5>Last updated Nov 13, 2017</h5>
+        <h5>Last updated Nov 11, 2017</h5>
 
         <pre><code class="language-javascript">const element = document.querySelector('css-selector');
 
 element.classList.add('class-name');</code></pre>    </div>
     <div class="card">
+        <a href="/how-to-interpolate-in-javascript/">
+            <h3>How to interpolate in JavaScript</h3>
+        </a>
+        <h5>Last updated Nov 11, 2017</h5>
+
+        <pre><code class="language-javascript">const name = 'John';
+
+console.log(`Welcome ${name}.
+You have ${2 * 5} new notifications!`);</code></pre>
+<pre class="output">
+Welcome John.
+You have 10 new notifications!
+</pre>    </div>
+    <div class="card">
+        <a href="/how-to-replace-spaces-with-dashes-in-javascript/">
+            <h3>How to replace spaces with dashes in JavaScript</h3>
+        </a>
+        <h5>Last updated Nov 11, 2017</h5>
+
+        <pre><code class="language-javascript">const text = "codetogo saved me tons of time";
+
+text.replace(/ /g, '-');</code></pre>
+<pre class="output">codetogo-saved-me-tons-of-time</pre>    </div>
+    <div class="card">
+        <a href="/how-to-reload-page-in-javascript/">
+            <h3>How to reload page in JavaScript</h3>
+        </a>
+        <h5>Last updated Nov 11, 2017</h5>
+
+        <pre><code class="language-javascript">window.location.reload();</code></pre>    </div>
+    <div class="card">
         <a href="/how-to-find-element-by-id-in-javascript/">
             <h3>How to find element by id in JavaScript</h3>
         </a>
-        <h5>Last updated Nov 13, 2017</h5>
+        <h5>Last updated Nov 11, 2017</h5>
 
         <pre><code class="language-javascript">const element = document.querySelector('#element-id');</code></pre>    </div>
+    <div class="card">
+        <a href="/how-to-listen-to-click-event-in-javascript/">
+            <h3>How to listen to click event in JavaScript</h3>
+        </a>
+        <h5>Last updated Nov 11, 2017</h5>
+
+        <pre><code class="language-javascript">const element = document.querySelector('css-selector');
+
+element.addEventListener('click', event =&gt; {
+    console.log('Element clicked');
+});</code></pre>    </div>
+    <div class="card">
+        <a href="/how-to-get-keys-of-object-in-javascript/">
+            <h3>How to get keys of object in JavaScript</h3>
+        </a>
+        <h5>Last updated Nov 11, 2017</h5>
+
+        <pre><code class="language-javascript">const person = {
+    key: 'value',
+    first_name: 'John',
+    last_name: 'Doe'
+};
+
+Object.keys(person);</code></pre>
+<pre class="output">['key', 'first_name', 'last_name']</pre>    </div>
+    <div class="card">
+        <a href="/how-to-increment-a-variable-in-javascript/">
+            <h3>How to increment a variable in JavaScript</h3>
+        </a>
+        <h5>Last updated Nov 11, 2017</h5>
+
+        <pre><code class="language-javascript">let counter = 0;
+counter++;</code></pre>
+<pre class="output">1</pre>    </div>
+    <div class="card">
+        <a href="/how-to-uppercase-a-string-in-javascript/">
+            <h3>How to uppercase a string in JavaScript</h3>
+        </a>
+        <h5>Last updated Nov 11, 2017</h5>
+
+        <pre><code class="language-javascript">const text = 'Hello World';
+
+text.toUpperCase();</code></pre>
+<pre class="output">HELLO WORLD</pre>    </div>
+
 </div>
 
     <footer>
