--- a/all/index.html
+++ b/all/index.html
@@ -67,6 +67,12 @@
                 <h5>Last updated Dec 16, 2017</h5>
             </div>
         </a>
+                        <a href="/how-to-filter-objects-in-array-in-javascript">
+            <div class="card">
+                <h3>How to filter objects in array in JavaScript</h3>
+                <h5>Last updated Dec 18, 2017</h5>
+            </div>
+        </a>
                         <a href="/how-to-remove-a-property-from-object-in-javascript">
             <div class="card">
                 <h3>How to remove a property from object in JavaScript</h3>
@@ -95,6 +101,18 @@
             <div class="card">
                 <h3>How to loop through array in JavaScript</h3>
                 <h5>Last updated Nov 11, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-convert-array-to-comma-separated-string-in-javascript">
+            <div class="card">
+                <h3>How to convert array to comma separated string in JavaScript</h3>
+                <h5>Last updated Dec 18, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-encode-url-in-javascript">
+            <div class="card">
+                <h3>How to encode url in JavaScript</h3>
+                <h5>Last updated Dec 18, 2017</h5>
             </div>
         </a>
                         <a href="/how-to-check-if-array-includes-element-in-javascript">
@@ -157,6 +175,18 @@
                 <h5>Last updated Dec 16, 2017</h5>
             </div>
         </a>
+                        <a href="/how-to-loop-backwards-through-array-in-javascript">
+            <div class="card">
+                <h3>How to loop backwards through array in JavaScript</h3>
+                <h5>Last updated Dec 18, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-decode-url-in-javascript">
+            <div class="card">
+                <h3>How to decode url in JavaScript</h3>
+                <h5>Last updated Dec 18, 2017</h5>
+            </div>
+        </a>
                         <a href="/how-to-add-item-to-array-in-javascript">
             <div class="card">
                 <h3>How to add item to array in JavaScript</h3>
@@ -179,6 +209,12 @@
             <div class="card">
                 <h3>How to find element by id in JavaScript</h3>
                 <h5>Last updated Nov 11, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-define-a-class-in-javascript">
+            <div class="card">
+                <h3>How to define a class in JavaScript</h3>
+                <h5>Last updated Dec 18, 2017</h5>
             </div>
         </a>
                         <a href="/how-to-capitalize-first-letter-in-javascript">
@@ -283,6 +319,12 @@
                 <h5>Last updated Dec 16, 2017</h5>
             </div>
         </a>
+                        <a href="/how-to-fetch-json-in-javascript">
+            <div class="card">
+                <h3>How to fetch json in JavaScript</h3>
+                <h5>Last updated Dec 18, 2017</h5>
+            </div>
+        </a>
                         <a href="/how-to-replace-a-class-of-element-in-javascript">
             <div class="card">
                 <h3>How to replace a class of element in JavaScript</h3>
@@ -331,6 +373,12 @@
                 <h5>Last updated Dec 16, 2017</h5>
             </div>
         </a>
+                        <a href="/how-to-call-a-function-with-arguments-in-javascript">
+            <div class="card">
+                <h3>How to call a function with arguments in JavaScript</h3>
+                <h5>Last updated Dec 18, 2017</h5>
+            </div>
+        </a>
                         <a href="/how-to-redirect-to-another-page-in-javascript">
             <div class="card">
                 <h3>How to redirect to another page in JavaScript</h3>
@@ -347,6 +395,12 @@
             <div class="card">
                 <h3>How to reload page in JavaScript</h3>
                 <h5>Last updated Nov 11, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-define-a-function-with-default-parameter-in-javascript">
+            <div class="card">
+                <h3>How to define a function with default parameter in JavaScript</h3>
+                <h5>Last updated Dec 18, 2017</h5>
             </div>
         </a>
             </div>
