Build for production

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="/css/main.css?v=3">
+<link rel="stylesheet" href="/css/main.css?v=4">
 <meta name="google-site-verification" content="xEjRvI-66es5w1rNkXoLeIcOQH-x0JZYst9uHHwD_1E" />
 <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
@@ -52,8 +52,8 @@
 
     <div class="container">
     <div class="banner">
-        <h1>JavaScript code to go</h1>
-        <h4>Find updated snippets for common JavaScript use cases</h4>
+        <h1>Find up to date snippets for common JavaScript use cases</h1>
+        <h4 class="subscribe-cta">Click here to get weekly updates in your inbox</h4>
         <input type="text" id="autocomplete" placeholder="How to loop through array in JavaScript">
     </div>
     <h4>Popular use cases</h4>
@@ -166,6 +166,16 @@ counter++;</code></pre>
 text.toUpperCase();</code></pre>
 <pre class="output">HELLO WORLD</pre>    </div>
 
+</div>
+
+<div id="subscribe">
+  <div id="subscribe-close">
+    <svg fill="#a4b1c1" width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
+      <path d="M0 0h24v24H0z" fill="none"></path>
+  </svg>
+</div>
+<iframe id="subscribe-popup" frameborder="0" src="https://upscri.be/22bdcc/?as_embed"></iframe>
 </div>
 
     <footer>
