--- a/all/index.html
+++ b/all/index.html
@@ -181,6 +181,12 @@
                 <h5>Last updated Nov 11, 2017</h5>
             </div>
         </a>
+                        <a href="/how-to-get-item-from-sessionstorage-in-javascript">
+            <div class="card card-compact">
+                <h3>How to get item from sessionstorage in JavaScript</h3>
+                <h5>Last updated Dec 21, 2017</h5>
+            </div>
+        </a>
                         <a href="/how-to-destructure-from-object-in-javascript">
             <div class="card card-compact">
                 <h3>How to destructure from object in JavaScript</h3>
@@ -203,6 +209,18 @@
             <div class="card card-compact">
                 <h3>How to loop backwards through array in JavaScript</h3>
                 <h5>Last updated Dec 18, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-manually-trigger-event-on-element-in-javascript">
+            <div class="card card-compact">
+                <h3>How to manually trigger event on element in JavaScript</h3>
+                <h5>Last updated Dec 21, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-create-array-from-existing-array-in-javascript">
+            <div class="card card-compact">
+                <h3>How to create array from existing array in JavaScript</h3>
+                <h5>Last updated Dec 21, 2017</h5>
             </div>
         </a>
                         <a href="/how-to-decode-url-in-javascript">
@@ -301,6 +319,12 @@
                 <h5>Last updated Dec 17, 2017</h5>
             </div>
         </a>
+                        <a href="/how-to-add-item-to-sessionstorage-in-javascript">
+            <div class="card card-compact">
+                <h3>How to add item to sessionstorage in JavaScript</h3>
+                <h5>Last updated Dec 21, 2017</h5>
+            </div>
+        </a>
                         <a href="/how-to-add-object-to-localstorage-in-javascript">
             <div class="card card-compact">
                 <h3>How to add object to localstorage in JavaScript</h3>
@@ -341,6 +365,12 @@
             <div class="card card-compact">
                 <h3>How to write a multiline string in JavaScript</h3>
                 <h5>Last updated Nov 11, 2017</h5>
+            </div>
+        </a>
+                        <a href="/how-to-convert-from-degree-to-radian-in-javascript">
+            <div class="card card-compact">
+                <h3>How to convert from degree to radian in JavaScript</h3>
+                <h5>Last updated Dec 21, 2017</h5>
             </div>
         </a>
                         <a href="/how-to-get-item-from-localstorage-in-javascript">
