--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About | Code to Go</title>
-    <meta charset="utf-8">
+    <title>About | Code to go</title>
+
+            <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="theme-color" content="#ffffff">
@@ -31,10 +32,10 @@
 <meta name="og:image" content="/images/share.png" />
 <meta name="og:description" content="Javascript code to go: Find updated snippets for common JavaScript use cases." />
 <meta name="og:site_name" content="Code to go" />
-</head>
+    </head>
 <body>
 
-    <nav>
+            <nav>
     <div class="container">
         <div class="nav-container">
             <a href="/" class="nav-spacer">
@@ -52,15 +53,18 @@
         </div>
     </div>
 </nav>
-    <div class="container about">
-        <div class="card">
-            <h3>About Code to go</h3>
-            <p class="about-text">
-                Code to go aims to help developers learning JavaScript find up to date, accurate and ready to use snippets of JavaScript code for common use cases.<br>
-                If you want to suggest a common use case, please create a new issue on the github repository by clicking on <a href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion: " target="_blank" rel="noopener">Contribute</a>.
-            </p>
-        </div>
+    
+    
+<div class="container about">
+    <div class="card">
+        <h3>About Code to go</h3>
+        <p class="about-text">
+            Code to go aims to help developers learning JavaScript find up to date, accurate and ready to use snippets of JavaScript code for common use cases.<br>
+            If you want to suggest a common use case, please create a new issue on the github repository by clicking on <a href="https://github.com/jadjoubran/codetogo.io/issues/new?title=Use+Case+Suggestion: " target="_blank" rel="noopener">Contribute</a>.
+        </p>
     </div>
+</div>
+
 
     <footer>
     <div class="container">
@@ -79,6 +83,7 @@
         </div>
     </div>
 </footer>
+
     <script>
     (function(){
         const questions = ['How to loop through array in JavaScript', 'How to interpolate in JavaScript', 'How to get keys of object in JavaScript', 'How to check if element has class in JavaScript', 'How to get first character of string in JavaScript', 'How to capitalize first letter in JavaScript', 'How to validate email in JavaScript', 'How to replace a class of element in JavaScript', 'How to reload page in JavaScript', 'How to interpolate in JavaScript']
