--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Code to Go</title>
-    <meta charset="utf-8">
+    <title>Code to go</title>
+
+            <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="theme-color" content="#ffffff">
@@ -31,9 +32,10 @@
 <meta name="og:image" content="/images/share.png" />
 <meta name="og:description" content="Javascript code to go: Find updated snippets for common JavaScript use cases." />
 <meta name="og:site_name" content="Code to go" />
-</head>
-<body class="landing">
-    <nav>
+    </head>
+<body>
+
+            <nav>
     <div class="container">
         <div class="nav-container nav-spacer">
             <a href="/">
@@ -49,7 +51,7 @@
     </div>
 </div>
 </nav>
-
+    
     <div class="container">
     <div class="banner">
         <h1>Find up to date snippets for common JavaScript use cases</h1>
