--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div>
 </nav>
     
-    <div class="container">
+    <div class="container landing">
     <div class="banner">
         <h1>Find up to date snippets for common JavaScript use cases</h1>
         <h4 class="subscribe-cta">Click here to get weekly updates in your inbox</h4>
