Build for production

--- a/all/index.html
+++ b/all/index.html
@@ -190,6 +190,12 @@
             <h5>Last updated Dec 21, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-destructure-with-default-value-in-javascript">
+        <div class="card card-compact">
+            <h3>How to destructure with default value in JavaScript</h3>
+            <h5>Last updated Dec 23, 2017</h5>
+        </div>
+    </a>
             <a href="/how-to-destructure-from-object-in-javascript">
         <div class="card card-compact">
             <h3>How to destructure from object in JavaScript</h3>
@@ -202,6 +208,12 @@
             <h5>Last updated Dec 16, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-check-if-number-is-odd-in-javascript">
+        <div class="card card-compact">
+            <h3>How to check if number is odd in JavaScript</h3>
+            <h5>Last updated Dec 23, 2017</h5>
+        </div>
+    </a>
             <a href="/how-to-get-first-character-of-string-in-javascript">
         <div class="card card-compact">
             <h3>How to get first character of string in JavaScript</h3>
@@ -212,6 +224,12 @@
         <div class="card card-compact">
             <h3>How to loop backwards through array in JavaScript</h3>
             <h5>Last updated Dec 18, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-check-if-number-is-even-in-javascript">
+        <div class="card card-compact">
+            <h3>How to check if number is even in JavaScript</h3>
+            <h5>Last updated Dec 23, 2017</h5>
         </div>
     </a>
             <a href="/how-to-manually-trigger-event-on-element-in-javascript">
@@ -238,6 +256,12 @@
             <h5>Last updated Dec 16, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-sort-array-in-descending-order-in-javascript">
+        <div class="card card-compact">
+            <h3>How to sort array in descending order in JavaScript</h3>
+            <h5>Last updated Dec 23, 2017</h5>
+        </div>
+    </a>
             <a href="/how-to-sum-items-of-array-in-javascript">
         <div class="card card-compact">
             <h3>How to sum items of array in JavaScript</h3>
@@ -254,6 +278,12 @@
         <div class="card card-compact">
             <h3>How to loop through object in JavaScript</h3>
             <h5>Last updated Nov 11, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-delete-item-from-array-in-javascript">
+        <div class="card card-compact">
+            <h3>How to delete item from array in JavaScript</h3>
+            <h5>Last updated Dec 23, 2017</h5>
         </div>
     </a>
             <a href="/how-to-find-element-by-id-in-javascript">
@@ -448,6 +478,12 @@
             <h5>Last updated Nov 11, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-create-string-from-character-code-in-javascript">
+        <div class="card card-compact">
+            <h3>How to create string from character code in JavaScript</h3>
+            <h5>Last updated Dec 23, 2017</h5>
+        </div>
+    </a>
             <a href="/how-to-replace-all-occurrences-of-string-in-javascript">
         <div class="card card-compact">
             <h3>How to replace all occurrences of string in JavaScript</h3>
@@ -458,6 +494,12 @@
         <div class="card card-compact">
             <h3>How to call a function with arguments in JavaScript</h3>
             <h5>Last updated Dec 18, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-sort-array-in-ascending-order-in-javascript">
+        <div class="card card-compact">
+            <h3>How to sort array in ascending order in JavaScript</h3>
+            <h5>Last updated Dec 23, 2017</h5>
         </div>
     </a>
             <a href="/how-to-redirect-to-another-page-in-javascript">
