--- a/how-to-destructure-from-object-in-javascript/index.html
+++ b/how-to-destructure-from-object-in-javascript/index.html
@@ -91,6 +91,12 @@ console.log(lat, lng)</code></pre>
             <h5>Last updated Nov 11, 2017</h5>
         </div>
     </a>
+        <a href="/how-to-destructure-with-default-value-in-javascript/">
+        <div class="card card-compact">
+            <h3>How to destructure with default value in JavaScript</h3>
+            <h5>Last updated Nov 11, 2017</h5>
+        </div>
+    </a>
     </div>
     </div>
 
