--- a/how-to-find-previous-element-in-javascript/index.html
+++ b/how-to-find-previous-element-in-javascript/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="/css/main.css?v=6">
+<link rel="stylesheet" href="/build/css/main-3fe4c7650f.css">
 <meta name="google-site-verification" content="xEjRvI-66es5w1rNkXoLeIcOQH-x0JZYst9uHHwD_1E" />
 <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
@@ -113,7 +113,7 @@ const nextElement = element.previousElementSibling;</code></pre>                
 </script>
 <script defer src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
-<script defer src="/js/all.js?v=3"></script>
+<script defer src="/build/js/all-bae40162cd.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110654751-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
