Build for production

--- a/all/index.html
+++ b/all/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="/build/css/main-3fe4c7650f.css">
+<link rel="stylesheet" href="/build/css/main-d601faabe7.css">
 <meta name="google-site-verification" content="xEjRvI-66es5w1rNkXoLeIcOQH-x0JZYst9uHHwD_1E" />
 <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
@@ -220,6 +220,12 @@
             <h5>Last updated Dec 16, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-split-comma-separated-string-in-javascript">
+        <div class="card card-compact">
+            <h3>How to split comma separated string in JavaScript</h3>
+            <h5>Last updated Dec 24, 2017</h5>
+        </div>
+    </a>
             <a href="/how-to-loop-backwards-through-array-in-javascript">
         <div class="card card-compact">
             <h3>How to loop backwards through array in JavaScript</h3>
@@ -254,6 +260,12 @@
         <div class="card card-compact">
             <h3>How to add item to array in JavaScript</h3>
             <h5>Last updated Dec 16, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-deep-clone-an-object-in-javascript">
+        <div class="card card-compact">
+            <h3>How to deep clone an object in JavaScript</h3>
+            <h5>Last updated Dec 24, 2017</h5>
         </div>
     </a>
             <a href="/how-to-sort-array-in-descending-order-in-javascript">
@@ -334,16 +346,34 @@
             <h5>Last updated Nov 11, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-comment-in-javascript">
+        <div class="card card-compact">
+            <h3>How to comment in JavaScript</h3>
+            <h5>Last updated Dec 24, 2017</h5>
+        </div>
+    </a>
             <a href="/how-to-create-an-object-in-javascript">
         <div class="card card-compact">
             <h3>How to create an object in JavaScript</h3>
             <h5>Last updated Nov 11, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-concatenate-arrays-in-javascript">
+        <div class="card card-compact">
+            <h3>How to concatenate arrays in JavaScript</h3>
+            <h5>Last updated Dec 24, 2017</h5>
+        </div>
+    </a>
             <a href="/how-to-convert-string-to-number-in-javascript">
         <div class="card card-compact">
             <h3>How to convert string to number in JavaScript</h3>
             <h5>Last updated Nov 11, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-swap-variables-in-javascript">
+        <div class="card card-compact">
+            <h3>How to swap variables in JavaScript</h3>
+            <h5>Last updated Dec 24, 2017</h5>
         </div>
     </a>
             <a href="/how-to-check-if-variable-is-an-object-in-javascript">
@@ -428,6 +458,12 @@
         <div class="card card-compact">
             <h3>How to fetch json in JavaScript</h3>
             <h5>Last updated Dec 18, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-create-a-switch-statement-in-javascript">
+        <div class="card card-compact">
+            <h3>How to create a switch statement in JavaScript</h3>
+            <h5>Last updated Dec 24, 2017</h5>
         </div>
     </a>
             <a href="/how-to-replace-a-class-of-element-in-javascript">
