--- a/how-to-convert-array-to-comma-separated-string-in-javascript/index.html
+++ b/how-to-convert-array-to-comma-separated-string-in-javascript/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="/build/css/main-3fe4c7650f.css">
+<link rel="stylesheet" href="/build/css/main-d601faabe7.css">
 <meta name="google-site-verification" content="xEjRvI-66es5w1rNkXoLeIcOQH-x0JZYst9uHHwD_1E" />
 <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
@@ -76,7 +76,17 @@ Eat,Sleep,Code,Repeat
                 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/join" target="_blank" rel="noopener"  itemprop="citation">MDN Docs</a>
             </div>
                     </div>
-            </div>
+        <div class="related">
+
+    <h4>Related use cases</h4>
+
+        <a href="/how-to-split-comma-separated-string-in-javascript/">
+        <div class="card card-compact">
+            <h3>How to split comma separated string in JavaScript</h3>
+        </div>
+    </a>
+    </div>
+    </div>
 
 
     <footer>
